--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/icon" href="./Images/favicon.png" />
-    <link rel="preload" href="../src/Images/bg1.jpg" as="image" />
+    <link rel="preload" href="https://i.ibb.co/qDmGTCy/bg-img-min.jpg" as="image" />
     <link rel="preload" href="../src/Images/logo.png" as="image" />
-    <link rel="preload" href="../src/Images/close.png" as="image" />
-    <link rel="preload" href="../src/Images/open.png" as="image" />
+    <link rel="preload" href="https://i.ibb.co/dgBr7qw/pizza-slice-min.png" as="image" />
+    <link rel="preload" href="https://i.ibb.co/jg97GSm/pizza-slice2-min.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
