*Delete unused Images and directory *Add preloader image with animation *Add image to search drop down *Add image to SectionTwo(Menu) *Redesgn meal cards *hosted all background images on ImgBB.com *Replace React-Rounter loader with fetch request

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/icon" href="./Images/favicon.png" />
     <link rel="preload" href="https://i.ibb.co/qDmGTCy/bg-img-min.jpg" as="image" />
+    <link rel="preload" href="https://i.ibb.co/7Q228RX/bg-img2.jpg" as="image" />
     <link rel="preload" href="../src/Images/logo.png" as="image" />
     <link rel="preload" href="https://i.ibb.co/dgBr7qw/pizza-slice-min.png" as="image" />
     <link rel="preload" href="https://i.ibb.co/jg97GSm/pizza-slice2-min.png" as="image" />
